--- a/sparsify.ipynb
+++ b/sparsify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 241,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -13,7 +13,6 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "from nni.algorithms.compression.v2.pytorch.pruning import LinearPruner\n",
-    "from nni.compression.pytorch import TorchEvaluator\n",
     "import nni"
    ],
    "metadata": {
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 242,
    "outputs": [],
    "source": [
     "iris = load_iris()\n",
@@ -43,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 243,
    "outputs": [],
    "source": [
     "model = nn.Sequential(\n",
-    "    nn.Linear(4, 32),\n",
+    "    nn.Linear(4, 128),\n",
     "    nn.Sigmoid(),\n",
-    "    nn.Linear(32, 3),\n",
+    "    nn.Linear(128, 3),\n",
     "    nn.Softmax(dim=1)\n",
     ")\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
@@ -64,26 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 244,
    "outputs": [],
    "source": [
-    "with torch.no_grad():\n",
-    "    y_pred = model(X)\n",
-    "    loss_start = loss_fn(y_pred, y)\n",
-    "\n",
-    "for i in range(1000):\n",
-    "    y_pred = model(X)\n",
-    "    loss = loss_fn(y_pred, y)\n",
-    "\n",
-    "    optimizer.zero_grad()\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    y_pred = model(X)\n",
-    "    loss_end = loss_fn(y_pred, y)\n",
-    "\n",
-    "assert (loss_start-loss_end) >= 0.01, f\"{(loss_start-loss_end)}\""
+    "def accuracy(y_p, y_a):\n",
+    "    return torch.sum(torch.argmax(y_p, dim=1) == y_a)/len(y_a)"
    ],
    "metadata": {
     "collapsed": false,
@@ -94,36 +78,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 245,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-20 16:11:24] \u001B[33mWARNING: The old API ...finetuner,speedup,dummy_input,evaluator,pruning_params will be deprecated after NNI v3.0,please using the new one ...evaluator,speedup,pruning_params\u001B[0m\n",
-      "[2022-11-20 16:11:24] \u001B[33mWARNING: This compressor is not set model and config_list, waiting for reset() or pass this to scheduler.\u001B[0m\n",
-      "[2022-11-20 16:11:24] \u001B[33mWARNING: The old API ...finetuner,speedup,dummy_input,evaluator,reset_weight will be deprecated after NNI v3.0,please using the new one ...evaluator,speedup,reset_weight\u001B[0m\n",
-      "[2022-11-20 16:11:24] \u001B[32msimulated prune 0 remain/total: 32/32\u001B[0m\n",
-      "[2022-11-20 16:11:24] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
-      "[2022-11-20 16:11:24] \u001B[32msimulated prune 0 remain/total: 32/32\u001B[0m\n",
-      "[2022-11-20 16:11:24] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 0 remain/total: 31/32\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 0 remain/total: 31/32\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 0 remain/total: 31/32\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 0 remain/total: 31/32\u001B[0m\n",
-      "[2022-11-20 16:11:25] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n"
+      "loss reduction 0.5107707977294922\n",
+      "accuracy before: 0.3333333432674408, accuracy after: 0.9866666793823242\n"
      ]
     }
    ],
    "source": [
+    "with torch.no_grad():\n",
+    "    y_pred = model(X)\n",
+    "    loss_start_train = loss_fn(y_pred, y)\n",
+    "    acc_start_train = accuracy(y_pred, y)\n",
+    "\n",
+    "for epoch in range(2000):\n",
+    "    y_pred = model(X)\n",
+    "    loss = loss_fn(y_pred, y)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    y_pred = model(X)\n",
+    "    loss_end_train = loss_fn(y_pred, y)\n",
+    "    acc_end_train = accuracy(y_pred, y)\n",
+    "\n",
+    "\n",
+    "print(f\"loss reduction {(loss_start_train-loss_end_train)}\")\n",
+    "print(f\"accuracy before: {acc_start_train}, accuracy after: {acc_end_train}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "outputs": [],
+   "source": [
+    "def training_func(model, optimizers, criterion, _lr_schedulers, _max_steps, max_epochs, *_, **__):\n",
+    "\n",
+    "    model.train()\n",
+    "    total_epochs = max_epochs if max_epochs else 2000\n",
+    "\n",
+    "    for _ in range(total_epochs):\n",
+    "        optimizers.zero_grad()\n",
+    "        loss = criterion(model(X), y)\n",
+    "        loss.backward()\n",
+    "        optimizers.step()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2022-11-29 12:51:47] \u001B[33mWARNING: This compressor is not set model and config_list, waiting for reset() or pass this to scheduler.\u001B[0m\n",
+      "[2022-11-29 12:51:47] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:47] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:49] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:49] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:50] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:50] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:52] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:52] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:54] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:54] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:55] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:55] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:57] \u001B[32msimulated prune 0 remain/total: 128/128\u001B[0m\n",
+      "[2022-11-29 12:51:57] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:51:59] \u001B[32msimulated prune 0 remain/total: 127/128\u001B[0m\n",
+      "[2022-11-29 12:51:59] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:52:01] \u001B[32msimulated prune 0 remain/total: 127/128\u001B[0m\n",
+      "[2022-11-29 12:52:01] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:52:03] \u001B[32msimulated prune 0 remain/total: 126/128\u001B[0m\n",
+      "[2022-11-29 12:52:03] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n",
+      "[2022-11-29 12:52:04] \u001B[32msimulated prune 0 remain/total: 123/128\u001B[0m\n",
+      "[2022-11-29 12:52:04] \u001B[32msimulated prune 2 remain/total: 3/3\u001B[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nni.algorithms.compression.v2.pytorch import TorchEvaluator\n",
+    "\n",
+    "optimizer_pruner = nni.trace(torch.optim.Adam)(model.parameters(), lr=1e-3)\n",
+    "dummy_input = torch.rand(10, 4)\n",
+    "\n",
+    "evaluator = TorchEvaluator(\n",
+    "    training_func=training_func,\n",
+    "    optimizers=optimizer_pruner,\n",
+    "    criterion=torch.nn.CrossEntropyLoss(),\n",
+    "    dummy_input=dummy_input)\n",
+    "\n",
     "config_list = [{\n",
-    "    'sparsity_per_layer': 0.5,\n",
-    "    'op_types': ['Linear']\n",
+    "    \"sparsity\": 0.5,\n",
+    "    \"op_types\": [\"Linear\"]\n",
     "}]\n",
-    "itpruner = LinearPruner(model, config_list, \"level\", log_dir=\"./.nni_log\", total_iteration=5)\n",
+    "itpruner = LinearPruner(\n",
+    "    model,\n",
+    "    config_list,\n",
+    "    total_iteration=10,\n",
+    "    pruning_algorithm=\"level\",\n",
+    "    evaluator=evaluator,\n",
+    "    log_dir=\".nni_log/\")\n",
+    "\n",
     "itpruner.compress()"
    ],
    "metadata": {
@@ -135,10 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [],
+   "execution_count": 248,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best iteration 10\n",
+      "loss change after prune -0.18073707818984985\n",
+      "accuracy after prune: 0.7266666889190674\n"
+     ]
+    }
+   ],
    "source": [
-    "iteration, model, model_masks, *_ = itpruner.get_best_result()"
+    "it, reduced_model, *_ = itpruner.get_best_result()\n",
+    "with torch.no_grad():\n",
+    "    loss_after_prune = loss_fn(reduced_model(X), y)\n",
+    "    acc_end_prune = accuracy(reduced_model(X), y)\n",
+    "\n",
+    "print(f\"best iteration {it}\")\n",
+    "print(f\"loss change after prune {loss_end_train- loss_after_prune}\")\n",
+    "print(f\"accuracy after prune: {acc_end_prune}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -149,7 +242,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 249,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(0.5000)"
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sum(torch.isclose(reduced_model[0].weight, torch.tensor(0.0)))/reduced_model[0].weight.size().numel()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "from actuallysparse import converter"
@@ -163,16 +279,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "outputs": [],
    "source": [
-    "# todo: zintegrować jako część konwertera\n",
     "sparse_model = nn.Sequential(\n",
-    "    converter.convert(model[0], \"coo\", model_masks[\"0\"][\"weight\"]),\n",
+    "    converter.convert(model[0], \"coo\", masks[\"0\"][\"weight\"]),\n",
     "    model[1],\n",
-    "    converter.convert(model[2], \"coo\", model_masks[\"2\"][\"weight\"]),\n",
+    "    converter.convert(model[2], \"coo\", masks[\"2\"][\"weight\"]),\n",
     "    model[3]\n",
     ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Adam does not support sparse gradients, please consider SparseAdam instead",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [64], line 9\u001B[0m\n\u001B[1;32m      7\u001B[0m     sparse_optimizer\u001B[38;5;241m.\u001B[39mzero_grad()\n\u001B[1;32m      8\u001B[0m     loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[0;32m----> 9\u001B[0m     \u001B[43msparse_optimizer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mstep\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     11\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m torch\u001B[38;5;241m.\u001B[39mno_grad():\n\u001B[1;32m     12\u001B[0m     y_pred \u001B[38;5;241m=\u001B[39m sparse_model(X)\n",
+      "File \u001B[0;32m~/Pruning_Praca_Inzynierska/venv/lib/python3.10/site-packages/torch/optim/optimizer.py:140\u001B[0m, in \u001B[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    138\u001B[0m profile_name \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOptimizer.step#\u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m.step\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(obj\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m)\n\u001B[1;32m    139\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m torch\u001B[38;5;241m.\u001B[39mautograd\u001B[38;5;241m.\u001B[39mprofiler\u001B[38;5;241m.\u001B[39mrecord_function(profile_name):\n\u001B[0;32m--> 140\u001B[0m     out \u001B[38;5;241m=\u001B[39m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    141\u001B[0m     obj\u001B[38;5;241m.\u001B[39m_optimizer_step_code()\n\u001B[1;32m    142\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m out\n",
+      "File \u001B[0;32m~/Pruning_Praca_Inzynierska/venv/lib/python3.10/site-packages/torch/optim/optimizer.py:23\u001B[0m, in \u001B[0;36m_use_grad_for_differentiable.<locals>._use_grad\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m     21\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m     22\u001B[0m     torch\u001B[38;5;241m.\u001B[39mset_grad_enabled(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdefaults[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdifferentiable\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[0;32m---> 23\u001B[0m     ret \u001B[38;5;241m=\u001B[39m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     24\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[1;32m     25\u001B[0m     torch\u001B[38;5;241m.\u001B[39mset_grad_enabled(prev_grad)\n",
+      "File \u001B[0;32m~/Pruning_Praca_Inzynierska/venv/lib/python3.10/site-packages/torch/optim/adam.py:206\u001B[0m, in \u001B[0;36mAdam.step\u001B[0;34m(self, closure, grad_scaler)\u001B[0m\n\u001B[1;32m    204\u001B[0m params_with_grad\u001B[38;5;241m.\u001B[39mappend(p)\n\u001B[1;32m    205\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m p\u001B[38;5;241m.\u001B[39mgrad\u001B[38;5;241m.\u001B[39mis_sparse:\n\u001B[0;32m--> 206\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAdam does not support sparse gradients, please consider SparseAdam instead\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m    207\u001B[0m grads\u001B[38;5;241m.\u001B[39mappend(p\u001B[38;5;241m.\u001B[39mgrad)\n\u001B[1;32m    209\u001B[0m state \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mstate[p]\n",
+      "\u001B[0;31mRuntimeError\u001B[0m: Adam does not support sparse gradients, please consider SparseAdam instead"
+     ]
+    }
+   ],
+   "source": [
+    "sparse_optimizer = torch.optim.Adam(sparse_model.parameters(), lr=0.001)\n",
+    "\n",
+    "for epoch in range(1000):\n",
+    "    y_pred = sparse_model(X)\n",
+    "    loss = loss_fn(y_pred, y)\n",
+    "\n",
+    "    sparse_optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    sparse_optimizer.step()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    y_pred = sparse_model(X)\n",
+    "    loss_fine_tuned = loss_fn(y_pred, y)\n",
+    "\n",
+    "print(f\"loss change {(loss_pruned - loss_fine_tuned)}\")"
    ],
    "metadata": {
     "collapsed": false,
