Fix train/test and add memory usage heuristic.

--- a/generate_baselines.ipynb
+++ b/generate_baselines.ipynb
@@ -37,20 +37,7 @@
     "dataset_train = torchvision.datasets.CIFAR10(\".data\", download=True, transform=transform)\n",
     "dataloader_train = torch.utils.data.DataLoader(dataset_train, batch_size=16)\n",
     "dataset_test = torchvision.datasets.CIFAR10(\".data\", download=True, train=False, transform=transform)\n",
-    "dataloader_test = torch.utils.data.DataLoader(dataset_train, batch_size=16)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "training_device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "pruning_device = \"cpu\" # do pruning on the CPU to conserve VRAM. Working on 2GB is pain.\n",
-    "pretrained_model = pretrained.vgg11_bn(device=training_device)"
+    "dataloader_test = torch.utils.data.DataLoader(dataset_test, batch_size=16)"
    ],
    "metadata": {
     "collapsed": false
@@ -59,16 +46,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor(0.9684, device='cuda:0')"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "outputs": [],
+   "source": [
+    "training_device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "pruning_device = \"cpu\"\n",
+    "pretrained_model = pretrained.vgg11_bn(device=training_device)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
    "source": [
     "def eval_accuracy(model, dataset=\"train\"):\n",
     "    dataloader = dataloader_train if dataset == \"train\" else dataloader_test\n",
@@ -82,8 +73,7 @@
     "\n",
     "            all_so_far += labels.size().numel()\n",
     "            correct += torch.sum(pred.eq(labels))\n",
-    "    return correct/all_so_far\n",
-    "eval_accuracy(pretrained_model)"
+    "    return correct/all_so_far"
    ],
    "metadata": {
     "collapsed": false
@@ -91,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def training_func(model, optimizers, criterion, *_args, **_kwargs):\n",
@@ -152,83 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2022-12-06 12:59:52] \u001B[33mWARNING: This compressor is not set model and config_list, waiting for reset() or pass this to scheduler.\u001B[0m\n",
-      "[2022-12-06 12:59:57] \u001B[32msimulated prune classifier.0 remain/total: 4096/4096\u001B[0m\n",
-      "[2022-12-06 12:59:57] \u001B[32msimulated prune classifier.3 remain/total: 4096/4096\u001B[0m\n",
-      "[2022-12-06 12:59:57] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 13:09:00] \u001B[32msimulated prune classifier.0 remain/total: 3811/4096\u001B[0m\n",
-      "[2022-12-06 13:09:01] \u001B[32msimulated prune classifier.3 remain/total: 4096/4096\u001B[0m\n",
-      "[2022-12-06 13:09:01] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 13:18:16] \u001B[32msimulated prune classifier.0 remain/total: 3715/4096\u001B[0m\n",
-      "[2022-12-06 13:18:16] \u001B[32msimulated prune classifier.3 remain/total: 4024/4096\u001B[0m\n",
-      "[2022-12-06 13:18:16] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 13:27:29] \u001B[32msimulated prune classifier.0 remain/total: 3645/4096\u001B[0m\n",
-      "[2022-12-06 13:27:29] \u001B[32msimulated prune classifier.3 remain/total: 4001/4096\u001B[0m\n",
-      "[2022-12-06 13:27:29] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 13:36:25] \u001B[32msimulated prune classifier.0 remain/total: 3591/4096\u001B[0m\n",
-      "[2022-12-06 13:36:25] \u001B[32msimulated prune classifier.3 remain/total: 3975/4096\u001B[0m\n",
-      "[2022-12-06 13:36:25] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 13:45:08] \u001B[32msimulated prune classifier.0 remain/total: 3550/4096\u001B[0m\n",
-      "[2022-12-06 13:45:08] \u001B[32msimulated prune classifier.3 remain/total: 3941/4096\u001B[0m\n",
-      "[2022-12-06 13:45:08] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 13:54:21] \u001B[32msimulated prune classifier.0 remain/total: 3508/4096\u001B[0m\n",
-      "[2022-12-06 13:54:21] \u001B[32msimulated prune classifier.3 remain/total: 3908/4096\u001B[0m\n",
-      "[2022-12-06 13:54:21] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:03:15] \u001B[32msimulated prune classifier.0 remain/total: 3458/4096\u001B[0m\n",
-      "[2022-12-06 14:03:15] \u001B[32msimulated prune classifier.3 remain/total: 3873/4096\u001B[0m\n",
-      "[2022-12-06 14:03:15] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:12:26] \u001B[32msimulated prune classifier.0 remain/total: 3404/4096\u001B[0m\n",
-      "[2022-12-06 14:12:26] \u001B[32msimulated prune classifier.3 remain/total: 3831/4096\u001B[0m\n",
-      "[2022-12-06 14:12:26] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:21:16] \u001B[32msimulated prune classifier.0 remain/total: 3325/4096\u001B[0m\n",
-      "[2022-12-06 14:21:16] \u001B[32msimulated prune classifier.3 remain/total: 3754/4096\u001B[0m\n",
-      "[2022-12-06 14:21:16] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:30:20] \u001B[32msimulated prune classifier.0 remain/total: 3158/4096\u001B[0m\n",
-      "[2022-12-06 14:30:20] \u001B[32msimulated prune classifier.3 remain/total: 3670/4096\u001B[0m\n",
-      "[2022-12-06 14:30:20] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:39:31] \u001B[33mWARNING: This compressor is not set model and config_list, waiting for reset() or pass this to scheduler.\u001B[0m\n",
-      "[2022-12-06 14:39:36] \u001B[32msimulated prune classifier.0 remain/total: 4096/4096\u001B[0m\n",
-      "[2022-12-06 14:39:36] \u001B[32msimulated prune classifier.3 remain/total: 4096/4096\u001B[0m\n",
-      "[2022-12-06 14:39:36] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:48:48] \u001B[32msimulated prune classifier.0 remain/total: 3797/4096\u001B[0m\n",
-      "[2022-12-06 14:48:48] \u001B[32msimulated prune classifier.3 remain/total: 4096/4096\u001B[0m\n",
-      "[2022-12-06 14:48:48] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 14:57:44] \u001B[32msimulated prune classifier.0 remain/total: 3704/4096\u001B[0m\n",
-      "[2022-12-06 14:57:44] \u001B[32msimulated prune classifier.3 remain/total: 4019/4096\u001B[0m\n",
-      "[2022-12-06 14:57:44] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:06:42] \u001B[32msimulated prune classifier.0 remain/total: 3633/4096\u001B[0m\n",
-      "[2022-12-06 15:06:42] \u001B[32msimulated prune classifier.3 remain/total: 3988/4096\u001B[0m\n",
-      "[2022-12-06 15:06:42] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:15:54] \u001B[32msimulated prune classifier.0 remain/total: 3578/4096\u001B[0m\n",
-      "[2022-12-06 15:15:54] \u001B[32msimulated prune classifier.3 remain/total: 3961/4096\u001B[0m\n",
-      "[2022-12-06 15:15:54] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:24:49] \u001B[32msimulated prune classifier.0 remain/total: 3531/4096\u001B[0m\n",
-      "[2022-12-06 15:24:49] \u001B[32msimulated prune classifier.3 remain/total: 3925/4096\u001B[0m\n",
-      "[2022-12-06 15:24:49] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:33:33] \u001B[32msimulated prune classifier.0 remain/total: 3473/4096\u001B[0m\n",
-      "[2022-12-06 15:33:33] \u001B[32msimulated prune classifier.3 remain/total: 3887/4096\u001B[0m\n",
-      "[2022-12-06 15:33:33] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:42:01] \u001B[32msimulated prune classifier.0 remain/total: 3423/4096\u001B[0m\n",
-      "[2022-12-06 15:42:01] \u001B[32msimulated prune classifier.3 remain/total: 3844/4096\u001B[0m\n",
-      "[2022-12-06 15:42:01] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:50:33] \u001B[32msimulated prune classifier.0 remain/total: 3350/4096\u001B[0m\n",
-      "[2022-12-06 15:50:33] \u001B[32msimulated prune classifier.3 remain/total: 3769/4096\u001B[0m\n",
-      "[2022-12-06 15:50:33] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 15:59:46] \u001B[32msimulated prune classifier.0 remain/total: 3181/4096\u001B[0m\n",
-      "[2022-12-06 15:59:46] \u001B[32msimulated prune classifier.3 remain/total: 3681/4096\u001B[0m\n",
-      "[2022-12-06 15:59:46] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n",
-      "[2022-12-06 16:08:42] \u001B[32msimulated prune classifier.0 remain/total: 1894/4096\u001B[0m\n",
-      "[2022-12-06 16:08:42] \u001B[32msimulated prune classifier.3 remain/total: 2810/4096\u001B[0m\n",
-      "[2022-12-06 16:08:42] \u001B[32msimulated prune classifier.6 remain/total: 10/10\u001B[0m\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "_, pruned_model, masks, *_ = prune_model(pretrained_model, .90, 10)\n",
     "_, very_pruned_model, very_masks, *_ = prune_model(pretrained_model, .99, 10)"
@@ -268,10 +183,10 @@
     }
    ],
    "source": [
-    "print(\"pretrained: \", eval_accuracy(pretrained_model, \"test\"))\n",
-    "print(\"extra train: \", eval_accuracy(extra_trained_model, \"test\"))\n",
-    "print(\"0.9 prune: \", eval_accuracy(pruned_model, \"test\"))\n",
-    "print(\"0.99 prune: \", eval_accuracy(very_pruned_model, \"test\"))"
+    "print(\"pretrained: \", eval_accuracy(pretrained_model, \"train\"))\n",
+    "print(\"extra train: \", eval_accuracy(extra_trained_model, \"train\"))\n",
+    "print(\"0.9 prune: \", eval_accuracy(pruned_model, \"train\"))\n",
+    "print(\"0.99 prune: \", eval_accuracy(very_pruned_model, \"train\"))"
    ],
    "metadata": {
     "collapsed": false
@@ -286,6 +201,201 @@
     "torch.save(extra_trained_model, \".weights/full/extra_trained\")\n",
     "torch.save(pruned_model, \".weights/full/pruned\")\n",
     "torch.save(very_pruned_model, \".weights/full/very_pruned\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "pretrained_model = torch.load(\".weights/full/pretrained\").to(pruning_device)\n",
+    "extra_trained_model = torch.load(\".weights/full/extra_trained\").to(pruning_device)\n",
+    "pruned_model = torch.load(\".weights/full/pruned\").to(pruning_device)\n",
+    "very_pruned_model = torch.load(\".weights/full/very_pruned\").to(pruning_device)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pretrained:  tensor(0.8808, device='cuda:0')\n",
+      "extra train:  tensor(0.8030, device='cuda:0')\n",
+      "0.9 prune:  tensor(0.8242, device='cuda:0')\n",
+      "0.99 prune:  tensor(0.6981, device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"pretrained: \", eval_accuracy(pretrained_model, \"test\"))\n",
+    "print(\"extra train: \", eval_accuracy(extra_trained_model, \"test\"))\n",
+    "print(\"0.9 prune: \", eval_accuracy(pruned_model, \"test\"))\n",
+    "print(\"0.99 prune: \", eval_accuracy(very_pruned_model, \"test\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "pretrained_model.eval()\n",
+    "extra_trained_model.eval()\n",
+    "pruned_model.eval()\n",
+    "very_pruned_model.eval()\n",
+    "None"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pretrained:  tensor(0.9074, device='cuda:0')\n",
+      "extra train:  tensor(0.8191, device='cuda:0')\n",
+      "0.9 prune:  tensor(0.8365, device='cuda:0')\n",
+      "0.99 prune:  tensor(0.7648, device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"pretrained: \", eval_accuracy(pretrained_model, \"test\"))\n",
+    "print(\"extra train: \", eval_accuracy(extra_trained_model, \"test\"))\n",
+    "print(\"0.9 prune: \", eval_accuracy(pruned_model, \"test\"))\n",
+    "print(\"0.99 prune: \", eval_accuracy(very_pruned_model, \"test\"))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "from actuallysparse import converter\n",
+    "\n",
+    "def compare_memory(layer, mode=\"coo\"):\n",
+    "    l_coo = converter.convert(layer, mode)\n",
+    "    t_dense = very_pruned_model.classifier[0].weight\n",
+    "    size_mb_dense = t_dense.element_size() * t_dense.nelement() /1024**2\n",
+    "    t_coo = l_coo.weight.coalesce()\n",
+    "    size_mb_sparse = (t_coo.indices().nelement() * 8 + t_coo.values().nelement() * 4) / 1024**2\n",
+    "    return size_mb_dense, size_mb_sparse"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "def sum_layers(model):\n",
+    "    x, y = 0, 0\n",
+    "    for i in [0, 3, 6]:\n",
+    "        xa, ya = compare_memory(model.classifier[i])\n",
+    "        x += xa\n",
+    "        y += ya\n",
+    "    return x, y"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(24.0, 360.78125)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_layers(pretrained_model)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(24.0, 36.078147888183594)"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_layers(pruned_model)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(24.0, 3.6078453063964844)"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_layers(very_pruned_model)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(8.0, 32.00000762939453)"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_memory(pruned_model.classifier[3])"
    ],
    "metadata": {
     "collapsed": false
