simplify first layer access

--- a/Training_loop.ipynb
+++ b/Training_loop.ipynb
@@ -116,7 +116,7 @@
    "outputs": [],
    "source": [
     "def train_prune_loop(model, data, optimizer, criterion,max_epochs = 2000, epochs_to_prune = 15):\n",
-    "    in_classifier_features = list(model.classifier.children())[0].in_features\n",
+    "    in_classifier_features = model.classifier[0].in_features\n",
     "    dummy_input = torch.ones(in_classifier_features)\n",
     "    model.train()\n",
     "    for epoch in range(max_epochs):\n",
